# redline

./: README.md  config.json  plan.md  pyproject.toml
logs/phase1_baseline/baseline-0c9a62fd/: meta.json
logs/phase1_baseline/baseline-c276c6b6/: meta.json
redline/: config.py  doctor.py
redline/baseline/: runner.py  task_suite.py
redline/report/: curves.py  summary.py
redline/stress/: concurrency_sweep.py  context_sweep.py  knee_detector.py  soak_test.py
redline/swarm/: dashboard.py  dataset_loader.py  evaluator.py  population.py  repair_agent.py  runner.py
redline/telemetry/: llm_timer.py  logger.py  metrics.py  system_monitor.py
tests/: test_baseline_repro.py  test_concurrency_sweep.py  test_config.py  test_context_sweep.py  test_curves.py  test_dashboard.py  test_dataset_loader.py  test_evaluator.py  test_knee_detector.py  test_llm_timer.py  test_logger.py  test_metrics.py  test_population.py  test_repair_parse.py  test_runner.py  test_soak_test.py  test_summary.py  test_swarm_runner.py  test_system_monitor.py  test_task_suite.py
