[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "redline"
version = "0.1.0"
description = "LLM performance redline testing framework"
requires-python = ">=3.12"
dependencies = [
    "evalplus>=0.3",
    "httpx[http2]>=0.27",
    "matplotlib>=3.8",
    "pandas>=2.0",
    "psutil>=5.9",
    "rich>=13.0",
    "seaborn>=0.13",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
redline = "redline.doctor:doctor"

[tool.setuptools.packages.find]
include = ["redline*"]
